--- a/file/adobeaftereffects/index.html
+++ b/file/adobeaftereffects/index.html
@@ -55,6 +55,7 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(34678)</p>
+                        <p>Password: freebie-soft.com</p>
                     </div>
                     </div>
                     <a href="/">Download</a>
