--- a/file/cheats/index.html
+++ b/file/cheats/index.html
@@ -54,6 +54,7 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(34574)</p>
+                        <h4>Password: freebie-soft.com</h4>
                     </div>
                     </div>
                     <a href="/">Download</a>
