--- a/file/setup/index.html
+++ b/file/setup/index.html
@@ -55,9 +55,11 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(2567)</p>
+                        <p>Password: freebie-soft.com</p>
                     </div>
                     </div>
                     <a href="/">Download</a>
+                    
                 </div>
             </div>
         </section>
