--- a/file/adobeaudition/index.html
+++ b/file/adobeaudition/index.html
@@ -55,9 +55,10 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(21436)</p>
+                        <p>Password: freebie-soft.com</p>
                     </div>
                     </div>
-                    <a href="https://transfer.sh/get/eoWya4/Wondershare%20Filmora.zip">Download</a>
+                    <a href="/">Download</a>
                 </div>
             </div>
         </section>
