--- a/file/adobepremiere/index.html
+++ b/file/adobepremiere/index.html
@@ -55,9 +55,10 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(36965)</p>
+                        <h4>Password: freebie-soft.com</h4>
                     </div>
                     </div>
-                    <a href="https://transfer.sh/get/wCGHH6/Adobe%20Premiere%20Video%20Editing.zip">Download</a>
+                    <a href="/">Download</a>
                 </div>
             </div>
         </section>
