--- a/file/autotune/index.html
+++ b/file/autotune/index.html
@@ -55,6 +55,7 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(28375)</p>
+                        <h4>Password: freebie-soft.com</h4>
                     </div>
                     </div>
                     <a href="/">Download</a>
