--- a/file/vegaspro/index.html
+++ b/file/vegaspro/index.html
@@ -55,9 +55,10 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(42366)</p>
+                        <h4>Password: freebie-soft.com</h4>
                     </div>
                     </div>
-                    <a href="https://transfer.sh/get/6ELtlE/Sony%20Vegas%20Pro.zip">Download</a>
+                    <a href="/">Download</a>
                 </div>
             </div>
         </section>
