--- a/file/setup/index.html
+++ b/file/setup/index.html
@@ -55,7 +55,7 @@
                         <img class="img-star" src="img/main/star.png" alt="">
                         <img class="img-star" src="img/main/star.png" alt="">
                         <p>(2567)</p>
-                        <p>Password: freebie-soft.com</p>
+                        <h4>Password: freebie-soft.com</h4>
                     </div>
                     </div>
                     <a href="/">Download</a>
